--- a/Estimate the number of servings/task-info.yaml
+++ b/Estimate the number of servings/task-info.yaml
@@ -9,6 +9,7 @@ files:
 feedback_link: https://hyperskill.org/learn/step/5661#comment
 status: Solved
 feedback:
-  message: Congratulations!
-  time: "Tue, 27 Aug 2024 01:48:19 UTC"
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Sat, 31 Aug 2024 00:40:12 UTC"
 record: 3
