--- a/Buy, fill, take/task-info.yaml
+++ b/Buy, fill, take/task-info.yaml
@@ -10,6 +10,7 @@ files:
 feedback_link: https://hyperskill.org/learn/step/5662#comment
 status: Solved
 feedback:
-  message: Congratulations!
-  time: "Tue, 27 Aug 2024 14:24:56 UTC"
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Sat, 31 Aug 2024 00:41:43 UTC"
 record: 4
