--- a/Keep track of the supplies/task-info.yaml
+++ b/Keep track of the supplies/task-info.yaml
@@ -9,6 +9,7 @@ files:
 feedback_link: https://hyperskill.org/learn/step/5663#comment
 status: Solved
 feedback:
-  message: Congratulations!
-  time: "Tue, 27 Aug 2024 22:57:34 UTC"
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Sat, 31 Aug 2024 00:43:00 UTC"
 record: 5
